--- a/style.css
+++ b/style.css
@@ -10,39 +10,48 @@
   display: inline-block;
   background: #fff;
   position: relative;
+  height: 0;
+  width: 0;
 }
 
 .dropdown-content {
   margin: 0;
+  margin-top: 4px;
   padding: 0;
   display: none;
-  width: 162.8px;
+  width: 161px;
   background: #fff;
   position: absolute;
-  left: -169px;
+  left: -168px;
   border-width: 0px 1px 1px;
   border-style: solid;
   border-color: #000;
 }
 
-.dropdown-btn-close::before {
-  content: "▶";
-}
-
 .dropdown_button {
   width: 22px;
-  padding: 1px;
-  height: 22px;
+  height: 16px;
+  position: relative;
+  left: -25px;
+  top: 2px;
 }
 
 .dropdown-btn-open::before {
   content: "▼";
 }
 
+.dropdown-btn-close::before {
+  content: "►";
+}
+
 .show-dropdown-content {
   display: block;
   overflow-y: auto;
   max-height: 90px;
+}
+
+.hide-dropdown-content {
+  display: none;
 }
 
 /* .dropdown-content_element:hover {
