--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
+.body {
+  height: 500px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+          align-items: center;
+}
+
 .fieldset {
-  margin: auto;
-  width: 600px;
-  height: 300px;
+  width: 300px;
+  height: 170px;
   text-align: center;
   background-color: #d8cfcf;
 }
@@ -24,7 +34,7 @@
   background: #fff;
   position: absolute;
   left: -168px;
-  border-width: 0px 1px 1px;
+  border-width: 1px 1px 1px;
   border-style: solid;
   border-color: #000;
 }
@@ -51,7 +61,13 @@
   max-height: 90px;
 }
 
+.show-dropdown-content-up {
+  display: block;
+  bottom: 16px;
+  overflow-y: auto;
+  max-height: 90px;
+}
+
 .dropdown-content_element:hover {
   background-color: #c2b4b4;
 }
-
